# ai-hub

./: .dockerignore  .env.example  .gitignore  00_START_HERE.md  ADMIN_UI_FIX_SUMMARY.md  AI_HUB_ARCHITECTURE_AND_DEPLOYMENT_PLAN.md  AI_HUB_BUG_REPORT_2026-06-08.md  AI_HUB_CURRENT_FLOW.md  AI_HUB_PROJECT_INTEGRATION_GUIDE.md  AUDIT_COMPLETE.txt  AUDIT_REPORT_FANPAGE_OPTIMIZATION.md  CHAT_AUDIT_COMPLETION_REPORT.md  CHAT_AUDIT_DEPLOYMENT_SUMMARY.md  CHAT_AUDIT_FEATURE.md  CHAT_AUDIT_FINAL_STATUS.md  CHAT_AUDIT_IMPLEMENTATION.md  CHAT_AUDIT_QUICK_START.md  CHAT_UI_REDESIGN.md  CHAT_VIEWER_FEATURE.md  CLAUDE.md  COMPARISON_API_CLAUDE_vs_AI_HUB.md  CREWAI_TOOLS_NOTE.md  DEPLOYMENT_ACTION_PLAN.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  EXECUTIVE_SUMMARY.md  FANPAGE_ACTION_PLAN.md  FANPAGE_AUDIT_SUMMARY.md  FANPAGE_DELIVERY_SUMMARY.md  FANPAGE_DOCUMENTATION_INDEX.md  FANPAGE_IMPLEMENTATION_GUIDE.md  FANPAGE_OPTIMIZATION_COMPLETE.md  FANPAGE_QUICK_REFERENCE.md  FANPAGE_TESTING_METRICS.md  FANPAGE_VERIFICATION_COMPLETE.md  FINAL_DELIVERY.md  FINAL_STATUS_REPORT.md  FINAL_STATUS_REPORT.txt  FINAL_SUMMARY.md  FINAL_TEST_REPORT_2026_05_15.md  (+37 more)
app/: __init__.py  main.py  main.py.broken
evals/: bench_contextual_retrieval.py  ihi_replay.py  langfuse_dataset_sync.py
reports/: q8_10slot_ctx8_10u50_gpuconc10  q8_10u50  q8_12slot_ctx8_gpu10_10u20_localonly  q8_12slot_ctx8_gpu8_10u20  q8_12slot_ctx8_gpu8_10u20_localonly_c8  q8_4slot_ctx4_10u10  q8_4slot_ctx4_10u10_conc6_tuned  q8_4slot_ctx4_10u10_conc7_tuned  q8_4slot_ctx4_10u10_gpuconc6_conc6  q8_5u20  q8_6slot_ctx4_10u10_gpuconc6  (+115 more)
(+506 files in other folders)
