[project]
name = "ai-hub"
version = "0.1.0"
description = "Central FastAPI server routing per-project chat to local llama.cpp or OpenRouter."
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that exercise multiple modules with mocked upstream",
    "no_isolated_db: opt out of the autouse isolated_db fixture in tests/conftest.py",
]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
